Changed app with notes

--- a/app_predict/Dockerfile
+++ b/app_predict/Dockerfile
@@ -1,10 +1,18 @@
-FROM python:3.7.1
+FROM python:3.7.3-slim
 
 RUN apt-get update -y
+
+RUN pip install gunicorn
+
+# Setup flask application
+COPY requirements.txt /
+RUN pip3 install --no-cache-dir -r /requirements.txt
 
 COPY . /app
 WORKDIR /app
 
-RUN pip3 install -r requirements.txt
-ENTRYPOINT ["python3"]
-CMD ["webapp/app.py"]
+EXPOSE 5000
+
+# Start gunicorn
+CMD ["gunicorn", "--config", "gunicorn_config.txt", "service.app:app"]
+
