--- a/app_predict/requirements.txt
+++ b/app_predict/requirements.txt
@@ -1,147 +1,11 @@
-absl-py==0.8.1
-anaconda-client==1.7.2
-anaconda-navigator==1.9.7
-appdirs==1.4.3
-asn1crypto==1.2.0
-astor==0.8.0
-attrs==19.3.0
-backcall==0.1.0
-backports.csv==1.0.7
-beautifulsoup4==4.8.2
-bleach==3.1.0
-bs4==0.0.1
-catboost==0.21
-certifi==2019.11.28
-cffi==1.13.0
-chardet==3.0.4
-cheroot==8.3.0
-CherryPy==18.5.0
-Click==7.0
-clyent==1.2.2
-colorama==0.4.3
-conda==4.8.2
-conda-package-handling==1.6.0
-cryptography==2.8
-cycler==0.10.0
-decorator==4.4.1
-defusedxml==0.6.0
-distlib==0.3.0
-docker==4.2.0
-entrypoints==0.3
-feedparser==5.2.1
-filelock==3.0.12
-Flask==1.1.1
-future==0.18.2
-gast==0.2.2
-google-pasta==0.1.8
-graphviz==0.13.2
-grpcio==1.16.1
-h5py==2.10.0
-idna==2.8
-importlib-metadata==1.5.0
-ipykernel==5.1.4
-ipython==7.12.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
+certifi==2020.4.5.1
+click==7.1.2
+flask==1.1.2
 itsdangerous==1.1.0
-jaraco.classes==3.1.0
-jaraco.collections==3.0.0
-jaraco.functools==3.0.0
-jaraco.text==3.2.0
-jedi==0.16.0
-Jinja2==2.11.1
-joblib==0.14.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.1.0
-jupyter-core==4.6.1
-Keras==2.2.4
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
-lightgbm==2.3.0
-lxml==4.5.0
-Markdown==3.1.1
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-matplotlib==3.1.3
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.0.15
-mkl-random==1.1.0
-mkl-service==2.3.0
-more-itertools==8.2.0
-mysqlclient==1.4.6
-nbconvert==5.6.1
-nbformat==5.0.4
-nltk==3.4.5
-notebook==6.0.3
-numpy==1.18.1
-olefile==0.46
-opt-einsum==3.1.0
-pandas==1.0.1
-pandocfilters==1.4.2
-parso==0.6.1
-Pattern==3.6
-pdfminer.six==20200124
-pickleshare==0.7.5
-Pillow==7.0.0
-plotly==4.5.0
-portend==2.6
-prometheus-client==0.7.1
-prompt-toolkit==3.0.3
-protobuf==3.11.2
-psutil==5.6.7
-pycosat==0.6.3
-pycparser==2.19
-pycryptodome==3.9.7
-Pygments==2.5.2
-pyOpenSSL==19.0.0
-pyparsing==2.4.6
-pypiwin32==223
-pyreadline==2.1
-pyrsistent==0.15.7
-PySocks==1.7.1
-python-dateutil==2.8.1
-python-docx==0.8.10
-pytz==2019.3
-pywin32==223
-pywinpty==0.5.7
-PyYAML==5.3
-pyzmq==18.1.1
-qtconsole==4.6.0
-QtPy==1.9.0
-requests==2.22.0
-retrying==1.3.3
-ruamel-yaml==0.15.46
-scikit-learn==0.22.1
+numpy==1.18.4
+scikit-learn==0.20.1
 scipy==1.4.1
-Send2Trash==1.5.0
-singledispatch==3.4.0.3
-six==1.14.0
-sortedcontainers==2.1.0
-soupsieve==2.0
-tempora==2.1.0
-tensorboard==2.0.0
-tensorflow==1.15.2
-tensorflow-estimator==1.15.1
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-textblob==0.15.3
-tornado==6.0.3
-tqdm==4.36.1
-traitlets==4.3.3
-urllib3==1.24.2
-virtualenv==20.0.15
-wcwidth==0.1.8
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==0.16.1
-widgetsnbextension==3.5.1
-win-inet-pton==1.1.0
+Werkzeug==1.0.1
 wincertstore==0.2
-wrapt==1.11.2
-xgboost==0.90
-zc.lockfile==2.0
-zipp==2.2.0
